fix z-index

--- a/source/css/_common/device.styl
+++ b/source/css/_common/device.styl
@@ -12,7 +12,7 @@
   right: 0
   bottom: 2rem
   float: right
-  z-index: 9
+  z-index: 10
   display: flex
   border-radius: $border-block 0 0 $border-block
   padding-right: 1rem
