--- a/source/css/_layout/layout.styl
+++ b/source/css/_layout/layout.styl
@@ -5,7 +5,7 @@
   justify-content: center
 
 .l_body .l_left
-  z-index: 7
+  z-index: 8
   width: var(--width-left)
   flex-shrink: 0
   position: sticky
@@ -32,7 +32,7 @@
       left: 0
       background: var(--site-bg)
       box-shadow: $boxshadow-card-float
-      z-index: 8
+      z-index: 9
     .l_main
       max-width: 100%
   .l_body.mobile
